--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,16 +1,22 @@
 /* common style */
 body {
     font-family: 'Merriweather', serif;
+    margin: 0;
+    padding: 0;
 }
 
-header {
+.container {
+    max-width: 1320px;
+    width: 82%;
+    margin: 0 auto;
+}
+
+.b1 {
     margin: 50px auto;
-    width: 1320px;
-    height: 600px;
     /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/banner\ image.png');
     border-radius: 16px;
-
+    background-repeat: no-repeat;
 }
 
 .happy {
@@ -27,12 +33,119 @@ header {
     color: #FFF;
     padding-left: 344px;
     padding-right: 344px;
+    padding-bottom: 177px;
     text-align: center;
     font-size: 72px;
 }
 
-.header-content {
-    width: 1600px;
-    height: 7335px;
-    background: red;
+.b2 {
+
+    justify-content: center;
+}
+
+.parcent {
+    color: #F00;
+    padding-left: 608px;
+    padding-right: 609px;
+    text-align: center;
+    font-family: Inter;
+    font-size: 88px;
+}
+
+.holiday {
+    color: #F00;
+    margin-top: 48px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.all {
+    color: #070211;
+    padding-left: 595px;
+    padding-right: 595px;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+}
+
+.vector {
+    position: fixed;
+    width: 803px;
+    height: 500px;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+.b3 {
+    /* width: 1320px;
+    height: 600px; */
+    background-image: url('../resources/Vectorrr.png');
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-between;
+}
+.party{
+    text-align: left;
+}
+
+.party h1 {
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 88px;
+    /* 137.5% */
+    letter-spacing: 7.04px;
+}
+
+.party p {
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.mid-night {
+    width: 642px;
+    padding-left: 126px;
+    padding-top: 126px;
+    padding-right: 552px;
+    color: #FFF;
+    font-size: 64px;
+    line-height: 88px;
+    letter-spacing: 7.04px;
+}
+
+.dolor {
+    color: rgba(255, 255, 255, 0.80);
+    padding-left: 126px;
+    padding-right: 500px;
+    font-size: 18px;
+}
+
+.join {
+    /* color: #FFF; */
+    margin-left: 158px;
+    margin-bottom: 142px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.ok {
+    display: flex;
+    width: 319.83px;
+    height: 464.662px;
+    padding: 0.008px 0px 0px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
