--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -146,7 +146,7 @@ body {
 .banner {
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     padding-top: 100px;
-    color: #F00;
+    color: #070211;
     width: 1320px;
     height: 482px;
     text-align: center;
@@ -156,14 +156,61 @@ body {
     text-transform: capitalize;
 }
 
+.spn {
+    color: #F00;
+    text-align: center;
+    font-size: 32px;
+    line-height: 56px;
+    text-transform: capitalize;
+}
+
 .btn {
     margin-left: 576px;
-    margin-bottom: 110px;
+    /* margin-bottom: 110px; */
+    align-items: center;
+    font-size: 20px;
+    text-align: center;
     border-radius: 8px;
+    color: #FFF;
     background: #F00;
     display: inline-flex;
     padding: 16px 32px;
     justify-content: center;
     align-items: center;
     gap: 10px;
+}
+
+/* photo */
+
+.heading {
+    color: #F00;
+    padding-top: 100px;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.our {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.para {
+    max-width: 735px;
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-style: normal;
+    line-height: 32px;
+}
+
+.row1{
+    display: flex;
+}
+
+.row2{
+    display: flex;
 }
