--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,7 +21,7 @@ body {
 .b1 {
     margin: 50px auto;
     /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/banner\ image.png');
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/banner/ image.png');
     border-radius: 16px;
     background-repeat: no-repeat;
 }
