--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,7 +21,7 @@ body {
 .b1 {
     margin: 50px auto;
     /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/banner/ image.png');
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/banner\ image.png');
     border-radius: 16px;
     background-repeat: no-repeat;
 }
@@ -207,10 +207,53 @@ body {
     line-height: 32px;
 }
 
-.row1{
+.row1 {
     display: flex;
+    border-radius: 16px;
+    gap: 24px;
+    margin-top: 48px;
+    margin-bottom: 24px;
 }
 
-.row2{
+.row2 {
     display: flex;
+    gap: 24px;
+    margin-bottom: 120px;
+}
+
+
+/* subscribe style */
+
+.sub {
+     width: 1320px;
+    height: 616px; 
+    border-radius: 16px;
+    /* background: rgba(255, 0, 0, 0.05); */
+    background-color: rgba(255, 0, 0, 0.05);
+}
+
+.email {
+    width: 150px; 
+    height: 150px; 
+    flex-shrink: 0;
+    padding-top: 80px;
+    /* padding-left: 400px; */
+    text-align: center;
+    /* padding-bottom: 40px; */
+}
+
+.sub {
+    color: #070211;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+
+.sit {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
 }
