--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,11 +17,28 @@ body {
     margin: 0 auto;
 }
 
+.button-red{
+    display: inline-flex;
+    padding: 16px 32px;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 48px;
+    border: none;
+}
+
 /* header style */
 .b1 {
     margin: 50px auto;
     /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/banner\ image.png');
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../images/banner\ image.png');
     border-radius: 16px;
     background-repeat: no-repeat;
 }
@@ -97,7 +114,7 @@ body {
 /* MID night party */
 
 .b3 {
-    background-image: url('../resources/Vectorrr.png');
+    background-image: url('../images/Vectorrr.png');
     background-repeat: no-repeat;
     display: flex;
     justify-content: space-between;
@@ -232,7 +249,7 @@ body {
     background-color: rgba(255, 0, 0, 0.05);
 }
 
-.email {
+email {
     width: 150px; 
     height: 150px; 
     flex-shrink: 0;
@@ -242,11 +259,10 @@ body {
     /* padding-bottom: 40px; */
 }
 
-.sub {
+.letter {
     color: #070211;
     text-align: center;
     font-size: 48px;
-    font-weight: 900;
     text-transform: capitalize;
 }
 
@@ -256,4 +272,12 @@ body {
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
+}
+
+#newsletter{
+    margin: 120px 0;
+}
+
+.newsletter-main{
+    background-color: rgba(255, 0, 0, 0.05);
 }
