--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -165,7 +165,7 @@ body {
     padding-top: 100px;
     color: #070211;
     width: 1320px;
-    height: 482px;
+    /* height: 482px; */
     text-align: center;
     font-size: 32px;
     font-weight: 600;
@@ -184,9 +184,11 @@ body {
 .btn {
     margin-left: 576px;
     /* margin-bottom: 110px; */
+    margin-top: 48px;
     align-items: center;
     font-size: 20px;
     text-align: center;
+    border: 0;
     border-radius: 8px;
     color: #FFF;
     background: #F00;
@@ -268,6 +270,8 @@ email {
 
 .sit {
     color: rgba(7, 2, 17, 0.60);
+    padding-left: 212px;
+    padding-right: 212px;
     text-align: center;
     font-size: 20px;
     font-style: normal;
@@ -280,4 +284,15 @@ email {
 
 .newsletter-main{
     background-color: rgba(255, 0, 0, 0.05);
+    padding: 270px 0;
+}
+
+#newsletter form{
+    max-width: 800px;
+    margin: 20px auto;
+    display: flex;
+}
+#newsletter form input{
+    /* width: 600px; */
+    flex-grow: 1;
 }
